# cleopatra

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SCOPE.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: github-pages-mkdocs.yml  pypi-release.yml  tests.yml
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/api/array-glyph-class/: index.html
develop/api/colors-class/: index.html
develop/api/statistics-class/: index.html
develop/api/styles-class/: index.html
develop/change-log/: index.html
develop/diagrams/glyph-architecture/: index.html
develop/installation/: index.html
develop/reference/animation/: index.html
develop/reference/array-glyph/: index.html
develop/reference/colors-glyph/: index.html
develop/reference/config/: index.html
develop/reference/flow-glyph/: index.html
develop/reference/geo/: index.html
develop/reference/glyph/: index.html
develop/reference/kde-glyph/: index.html
develop/reference/line-glyph/: index.html
develop/reference/mesh-glyph/: index.html
develop/reference/polygon-glyph/: index.html
develop/reference/projection/: index.html
develop/reference/reference-data/: index.html
develop/reference/scatter-glyph/: index.html
develop/reference/tiles/: index.html
develop/scope/: index.html
develop/search/: search_index.json
develop/unstructured-mesh-guide/: index.html
docs/: change-log.md  index.md  installation.md  scope.md  unstructured-mesh-guide.md
docs/diagrams/: glyph-architecture.md
docs/reference/: animation.md  array-glyph.md  colors-glyph.md  config.md  flow-glyph.md  geo.md  glyph.md  kde-glyph.md  line-glyph.md  mesh-glyph.md  polygon-glyph.md  projection.md  reference-data.md  scatter-glyph.md  statistics-glyph.md  styles-glyph.md  tiles.md  vector-glyph.md
examples/: array_plot_examples.py  statistical_plots_examples.py
examples/notebooks/: mesh_glyph.ipynb
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/change-log/: index.html
latest/installation/: index.html
latest/scope/: index.html
latest/search/: search_index.json
latest/unstructured-mesh-guide/: index.html
main/: 404.html  index.html  objects.inv  sitemap.xml
main/change-log/: index.html
main/installation/: index.html
main/scope/: index.html
main/search/: search_index.json
main/unstructured-mesh-guide/: index.html
src/cleopatra/: __init__.py  animation.py  array_glyph.py  colors.py  config.py  flow_glyph.py  geo.py  glyph.py  hillshade.py  kde_glyph.py  line_glyph.py  mesh_glyph.py  polygon_glyph.py  projection.py  reference.py  scatter_glyph.py  statistical_glyph.py  styles.py  tiles.py  vector_glyph.py
tests/: conftest.py  test_animation.py  test_array_glyph.py  test_categorize.py  test_classify.py  test_colors.py  test_flow_glyph.py  test_geo.py  test_glyph.py  test_hillshade.py  test_init.py  test_kde_glyph.py  test_line_glyph.py  test_mesh_glyph.py  test_polygon_glyph.py  test_projection.py  test_reference.py  test_scatter_glyph.py  test_statistical_glyph.py  test_styles.py  test_styles_doctests.py  test_tiles.py  test_value_to_size.py  test_vector_glyph.py
tools/: build_basemap_assets.py  build_cmocean_presets.py  build_magics_presets.py
(+119 files in other folders)
